Final cleanup and Inv Summary highlighting and enabling

--- a/src/app/delorder/delorder.component.html
+++ b/src/app/delorder/delorder.component.html
@@ -80,7 +80,7 @@
                   </ng-container>
 
                   <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{ 'sumWarn': row.itemQty !== row.DeliveryNoteQty}"></tr>
                 </table>
               </div>
         </mat-grid-tile>
