--- a/src/app/delorder/delorder.component.css
+++ b/src/app/delorder/delorder.component.css
@@ -77,3 +77,7 @@ tr.mat-footer-row, tr.mat-row {
 th.mat-header-cell, td.mat-cell{
   text-align: center;
 }
+
+.sumWarn {
+  background-color: yellow;
+}
