Allowed for row pagination in del order list

--- a/src/app/delnote/delnotecrud/delnotecrud.component.html
+++ b/src/app/delnote/delnotecrud/delnotecrud.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <section class="delnote-form">
-    <form (ngSubmit)="onSave()" [formGroup]="delnoteform" class="ordernote-form">
+    <form (ngSubmit)="onSave()" [formGroup]="delnoteform" class="ordernote-form" autocomplete="off">
       <h4>{{screenName}}</h4>
 
       <mat-grid-list cols="4" rowHeight="110px">
