Added Receiver phone to delnote

--- a/src/app/shared_prints/delnotedoc/delnotedoc.component.html
+++ b/src/app/shared_prints/delnotedoc/delnotedoc.component.html
@@ -14,6 +14,7 @@
               <h5 #receiverAdd4>Address 4</h5>
               <h5></h5>
               <h5 #receiverTown>Town</h5>
+              <h5 #receiverPhone>Phone</h5>
             </div>
           </td>
           <td class="LogoContainer">
